LSH first commit

--- a/untitled.ui
+++ b/untitled.ui
@@ -132,9 +132,9 @@
      <widget class="QWidget" name="gridLayoutWidget_2">
       <property name="geometry">
        <rect>
-        <x>570</x>
+        <x>590</x>
         <y>30</y>
-        <width>421</width>
+        <width>401</width>
         <height>380</height>
        </rect>
       </property>
@@ -297,9 +297,9 @@
      <widget class="QWidget" name="horizontalLayoutWidget_2">
       <property name="geometry">
        <rect>
-        <x>570</x>
+        <x>590</x>
         <y>440</y>
-        <width>421</width>
+        <width>401</width>
         <height>80</height>
        </rect>
       </property>
@@ -342,22 +342,12 @@
        </item>
       </layout>
      </widget>
-     <widget class="QLCDNumber" name="lcdNumber">
-      <property name="geometry">
-       <rect>
-        <x>820</x>
-        <y>530</y>
-        <width>171</width>
-        <height>23</height>
-       </rect>
-      </property>
-     </widget>
      <widget class="QGroupBox" name="groupBox">
       <property name="geometry">
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>551</width>
+        <width>571</width>
         <height>541</height>
        </rect>
       </property>
@@ -369,7 +359,7 @@
         <rect>
          <x>10</x>
          <y>20</y>
-         <width>530</width>
+         <width>551</width>
          <height>510</height>
         </rect>
        </property>
@@ -380,6 +370,19 @@
         <string/>
        </property>
       </widget>
+     </widget>
+     <widget class="QLabel" name="pt_Timer">
+      <property name="geometry">
+       <rect>
+        <x>655</x>
+        <y>530</y>
+        <width>321</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="Tab_ptex">
