--- a/untitled.ui
+++ b/untitled.ui
@@ -374,14 +374,14 @@
      <widget class="QLabel" name="pt_Timer">
       <property name="geometry">
        <rect>
-        <x>655</x>
+        <x>880</x>
         <y>530</y>
-        <width>321</width>
+        <width>111</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>TextLabel</string>
+       <string>0000-00-00 00:00:00</string>
       </property>
      </widget>
     </widget>
