--- a/dlg_MotionSelect.ui
+++ b/dlg_MotionSelect.ui
@@ -66,6 +66,11 @@
      <widget class="QComboBox" name="comboBox_1">
       <item>
        <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item>
+       <property name="text">
         <string>Home Key</string>
        </property>
       </item>
@@ -132,6 +137,11 @@
      <widget class="QComboBox" name="comboBox_2">
       <item>
        <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item>
+       <property name="text">
         <string>Home Key</string>
        </property>
       </item>
@@ -154,6 +164,11 @@
     </item>
     <item row="2" column="1">
      <widget class="QComboBox" name="comboBox_3">
+      <item>
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item>
        <property name="text">
         <string>Home Key</string>
@@ -180,6 +195,11 @@
      <widget class="QComboBox" name="comboBox_4">
       <item>
        <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item>
+       <property name="text">
         <string>Home Key</string>
        </property>
       </item>
@@ -204,6 +224,11 @@
      <widget class="QComboBox" name="comboBox_5">
       <item>
        <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item>
+       <property name="text">
         <string>Home Key</string>
        </property>
       </item>
@@ -226,6 +251,11 @@
     </item>
     <item row="5" column="1">
      <widget class="QComboBox" name="comboBox_6">
+      <item>
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item>
        <property name="text">
         <string>Home Key</string>
