--- a/untitled.ui
+++ b/untitled.ui
@@ -72,6 +72,10 @@
        <property name="text">
         <string>Open</string>
        </property>
+       <property name="icon">
+        <iconset resource="../icon.qrc">
+         <normaloff>:/icon_PPT/icon/icon_ppt.png</normaloff>:/icon_PPT/icon/icon_ppt.png</iconset>
+       </property>
       </widget>
      </item>
      <item row="0" column="1">
@@ -105,6 +109,10 @@
       <widget class="QPushButton" name="Btn_SaveFolder">
        <property name="text">
         <string>Select</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../icon.qrc">
+         <normaloff>:/icon_file/icon/icon_file.png</normaloff>:/icon_file/icon/icon_file.png</iconset>
        </property>
       </widget>
      </item>
@@ -317,6 +325,10 @@
 녹화
 </string>
          </property>
+         <property name="icon">
+          <iconset resource="../icon.qrc">
+           <normaloff>:/icon_Rec/icon/icon_rec.png</normaloff>:/icon_Rec/icon/icon_rec.png</iconset>
+         </property>
         </widget>
        </item>
        <item>
@@ -371,14 +383,51 @@
        </property>
       </widget>
      </widget>
+     <widget class="QLabel" name="pt_label_image">
+      <property name="geometry">
+       <rect>
+        <x>730</x>
+        <y>528</y>
+        <width>50</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">image: url(:/icon_timer/icon/icon_timer.png);</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::Box</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
      <widget class="QLCDNumber" name="pt_lcdNumber">
       <property name="geometry">
        <rect>
-        <x>903</x>
+        <x>790</x>
         <y>530</y>
-        <width>91</width>
+        <width>201</width>
         <height>23</height>
        </rect>
+      </property>
+      <property name="smallDecimalPoint">
+       <bool>false</bool>
+      </property>
+      <property name="digitCount">
+       <number>10</number>
+      </property>
+      <property name="mode">
+       <enum>QLCDNumber::Dec</enum>
+      </property>
+      <property name="segmentStyle">
+       <enum>QLCDNumber::Filled</enum>
+      </property>
+      <property name="intValue" stdset="0">
+       <number>0</number>
       </property>
      </widget>
     </widget>
@@ -389,9 +438,9 @@
      <widget class="QWidget" name="gridLayoutWidget_3">
       <property name="geometry">
        <rect>
-        <x>590</x>
+        <x>570</x>
         <y>30</y>
-        <width>401</width>
+        <width>421</width>
         <height>381</height>
        </rect>
       </property>
@@ -576,7 +625,7 @@
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>571</width>
+        <width>551</width>
         <height>541</height>
        </rect>
       </property>
@@ -588,7 +637,7 @@
         <rect>
          <x>10</x>
          <y>20</y>
-         <width>551</width>
+         <width>531</width>
          <height>511</height>
         </rect>
        </property>
@@ -619,9 +668,9 @@
      <widget class="QWidget" name="horizontalLayoutWidget_3">
       <property name="geometry">
        <rect>
-        <x>590</x>
+        <x>570</x>
         <y>440</y>
-        <width>401</width>
+        <width>421</width>
         <height>80</height>
        </rect>
       </property>
@@ -644,6 +693,10 @@
           <string>
 녹화
 </string>
+         </property>
+         <property name="icon">
+          <iconset resource="../icon.qrc">
+           <normaloff>:/icon_Rec/icon/icon_rec.png</normaloff>:/icon_Rec/icon/icon_rec.png</iconset>
          </property>
         </widget>
        </item>
@@ -670,14 +723,51 @@
        </item>
       </layout>
      </widget>
+     <widget class="QLabel" name="ptex_label_image">
+      <property name="geometry">
+       <rect>
+        <x>730</x>
+        <y>529</y>
+        <width>50</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">image: url(:/icon_timer/icon/icon_timer.png);</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::Box</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
      <widget class="QLCDNumber" name="ptex_lcdNumber">
       <property name="geometry">
        <rect>
-        <x>900</x>
+        <x>790</x>
         <y>530</y>
-        <width>91</width>
+        <width>201</width>
         <height>23</height>
        </rect>
+      </property>
+      <property name="smallDecimalPoint">
+       <bool>false</bool>
+      </property>
+      <property name="digitCount">
+       <number>10</number>
+      </property>
+      <property name="mode">
+       <enum>QLCDNumber::Dec</enum>
+      </property>
+      <property name="segmentStyle">
+       <enum>QLCDNumber::Filled</enum>
+      </property>
+      <property name="intValue" stdset="0">
+       <number>0</number>
       </property>
      </widget>
     </widget>
@@ -722,7 +812,9 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="../icon.qrc"/>
+ </resources>
  <connections/>
  <slots>
   <slot>aaa()</slot>
